# thero

./: CMakeLists.txt  README.md
cmake/modules/: FindThero.cmake
include/thero/: any.hpp  assert.hpp  copyablepolymorphic.hpp  moduleset.hpp  optional.hpp  polymorphicwrapper.hpp  randomselector.hpp  resolver.hpp  smartenum.hpp  variant.hpp
